# CodingProjects

./: .gitignore  README.md
ComputerVision/Cuda/: CMakeLists.txt
ComputerVision/SimilarityMeasures/: CMakeLists.txt  FastNNC.h  README.md  main.cpp  ncc_new.h  sad.h  ssd.h  zncc.h  zncc_new.h
ComputerVision/StereoMatching/StereoBlockMatching/: CMakeLists.txt  StereoBlockMatcher.h  main.cpp
ComputerVision/StereoMatching/StereoBlockMatching/include/: ncc.h  zncc.h
ComputerVision/TemplateMatching/NormalizedCrossCorrelation/: CMakeLists.txt  main.cpp  ncc.h
ComputerVision/TemplateMatching/TemplateMatcher/: CMakeLists.txt  TemplateMatcher.h  main.cpp
DataStructures/Array/: Array.h  ArrayIterator.h  CMakeLists.txt  main.cpp
DataStructures/Array/UnitTests/: ArrayUnitTest.cpp  CMakeLists.txt
DataStructures/DynamicArray/: CMakeLists.txt  DynamicArray.h  main.cpp
DataStructures/DynamicArray/UnitTests/: CMakeLists.txt  DynamicArrayUnitTest.cpp
DataStructures/LinkedList/: CMakeLists.txt  LinkedList.h
DataStructures/LinkedList/UnitTests/: CMakeLists.txt  LinkedListUnitTest.cpp
DataStructures/Matrices/: CMakeLists.txt  Matrix.h  MatrixExceptions.h  main.cpp
DataStructures/Matrices/UnitTests/: CMakeLists.txt  MatrixUnitTest.cpp
DataStructures/MultiDimensionalArrays/: CMakeLists.txt  MultidimensionalArray.h  main.cpp
DataStructures/RotationMatrices/: CMakeLists.txt  RotationMatrices.h
DataStructures/RotationMatrices/UnitTests/: CMakeLists.txt  RotationMatrixUnitTest.cpp
EigenPractice/EigenTest/: CMakeLists.txt  main.cpp
EigenPractice/StateSpace/MassSpringDamper/: CMakeLists.txt  SimpleOscillator.h  main.cpp
FunctionalStateMachine/: CMakeLists.txt  FSM.h  main.cpp
JsonParser/: CMakeLists.txt  JsonExceptions.h  JsonLexer.h  JsonParser.h  JsonToken.h  README.md  main.cpp
JsonParser/test_files/: dummy_file.json  test_file.json
NetworkingPractice/SimpleClientServer/: CMakeLists.txt  client.cpp  server.cpp
PyBind11/DummyExample/: CMakeLists.txt  build_binary.sh  example_py.py  main.cpp  setup.py
Simulation/AeroSpace/Quadcopter/: CMakeLists.txt  QuadSim.h  main.cpp
Simulation/AeroSpace/Quadcopter/notes/: main.tex  makefile
Simulation/AeroSpace/Quadcopter/notes/sections/: 0_introduction.tex  1_coordinate_frames.tex  4_newtons_eqns.tex  5_eulers_eqns.tex  6_newton_euler.tex  7_external_forces.tex  8_dynamics_model.tex  9_simulation.tex  appendix_A.tex
